<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <Button
      android:id="@+id/button_0"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/button_1"
      android:text="@string/digit0"
      />
  <Button
      android:id="@+id/button_1"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/button_4"
      android:text="@string/digit1"
      />
  <Button
      android:id="@+id/button_2"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_1"
      android:layout_below="@+id/button_4"
      android:text="@string/digit2"
      />
  <Button
      android:id="@+id/button_3"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_2"
      android:layout_below="@+id/button_4"
      android:text="@string/digit3"
      />
  <Button
      android:id="@+id/button_4"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/button_7"
      android:text="@string/digit4"
      />
  <Button
      android:id="@+id/button_5"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_4"
      android:layout_below="@+id/button_7"
      android:text="@string/digit5"
      />
  <Button
      android:id="@+id/button_6"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_5"
      android:layout_below="@+id/button_7"
      android:text="@string/digit6"
      />
  <Button
      android:id="@+id/button_7"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentTop="true"
      android:layout_alignParentStart="true"
      android:text="@string/digit7"
      />
  <Button
      android:id="@+id/button_8"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/button_7"
      android:text="@string/digit8"
      />
  <Button
      android:id="@+id/button_9"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/button_8"
      android:text="@string/digit9"
      />
  <Button
      android:id="@+id/button_all_clear"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_alignParentTop="true"
      android:layout_toEndOf="@+id/button_9"
      android:text="@string/all_clear"
      />
  <Button
      android:id="@+id/button_go"
      app:layout_widthPercent="@dimen/button_double_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_0"
      android:layout_below="@+id/button_2"
      android:text="@string/go"
      />
  <Button
      android:id="@+id/button_clear"
      app:layout_widthPercent="@dimen/button_width_percent"
      app:layout_marginPercent="@dimen/button_layout_margin_horizontal"
      android:layout_height="@dimen/round_button_height"
      style="@style/round_button_normal"
      android:layout_toEndOf="@+id/button_6"
      android:layout_below="@+id/button_7"
      android:text="@string/clear_one"
      />
</android.support.percent.PercentRelativeLayout>